fix content overlapping in chat

--- a/src/routes/Chat/styles.css
+++ b/src/routes/Chat/styles.css
@@ -36,7 +36,7 @@ h1.title{
 
 .chat-person-container{
     width: 100%;
-    height: 100px;
+    height: fit-content;
     gap: 10px;
     box-shadow: 0 0 10px 3px #94949454;
     border-radius: 10px;
